Moved to alacritty

--- a/qutebrowser/onedark-all-sites.css
+++ b/qutebrowser/onedark-all-sites.css
@@ -315,7 +315,7 @@ a.filter-item:hover,
   border-color: #272b33 !important;
 }
 .pl-c {
-  color: #272b33 !important;
+  color: #839496 !important;
 }
 .pl-c1 {
   color: #f3f4f5 !important;
