--- a/qutebrowser/onedark-all-sites.css
+++ b/qutebrowser/onedark-all-sites.css
@@ -5,6 +5,14 @@
 /* } */
 /* for code with white backround */
 
+/* invidious */
+.pure-u-md-2-24{
+    width: 0% !important;
+}
+.pure-u-md-20-24{
+    width: 100% !important;
+}
+
 * {
   border-color: #657b83 !important;
 }
@@ -2582,12 +2590,4 @@ homepage-featured__content-title, .homepage-featured__content-desc,
   background: #272b33 !important;
   background-color: #272b33 !important;
   color: #839496 !important;
-}
-
-/* invidious */
-.pure-u-md-1-12, .pure-u-md-2-24{
-    width: 0% !important;
-}
-.pure-u-md-20-24, .pure-u-md-5-6{
-    width: 100% !important;
 }
